# corert

./: .editorconfig  .gitattributes  .gitignore  .toolversions  .vsconfig  BuildToolsVersion.txt  CoreCLRTestsURL.txt  Dockerfile  DotnetCLIVersion.txt  NuGet.config  PATENTS.TXT  Packaging.props  README.md  THIRD-PARTY-NOTICES  THIRD-PARTY-NOTICES.TXT  azure-pipelines.yml  build-managed.cmd  build-managed.sh  build-native.cmd  build-native.sh  build-packages.cmd  build-packages.sh  build.cmd  build.proj  build.sh  buildnative.cmd  buildvars-setup.cmd  clean.cmd  config.json  dependencies.props  dir.props  dir.targets  dir.traversal.targets  dummy  global.json  glossary.md  init-tools.cmd  init-tools.msbuild  init-tools.sh  netci.groovy  (+4 more)
src/Native/: CMakeLists.txt  CMakeSettings.json  build-native.cmd  build-native.sh  configure.cmake  functions.cmake  gen-buildsys-clang.sh  gen-buildsys-win.bat  gen-buildsys.cmd  gen-buildsys.sh  probe-win.ps1
src/Native/Bootstrap/: CMakeLists.txt  CppCodeGen.h  common.cpp  common.h  main.cpp  platform.h  platform.linux.cpp  platform.unix.cpp  platform.windows.cpp  vector.h
src/Native/Bootstrap/base/: CMakeLists.txt
src/Native/Bootstrap/cpp/: CMakeLists.txt
src/Native/Bootstrap/dll/: CMakeLists.txt
src/Native/Common/: pal_endian.h  pal_utilities.h  utilcode.h
src/Native/ObjWriter/: CMakeLists.txt  cfi.h  cordebuginfo.h  cvconst.h  jitDebugInfo.h  llvm.patch  objwriter.cpp  objwriter.exports  objwriter.h  typeBuilder.cpp  typeBuilder.h
src/Native/ObjWriter/.nuget/: Microsoft.DotNet.ObjectWriter.nuspec  runtime.json  toolchain.osx.10.10-x64.Microsoft.DotNet.ObjectWriter.nuspec  toolchain.ubuntu.14.04-x64.Microsoft.DotNet.ObjectWriter.nuspec  toolchain.win7-x64.Microsoft.DotNet.ObjectWriter.nuspec
src/Native/ObjWriter/debugInfo/: typeBuilder.h
src/Native/ObjWriter/llvmCap/: CMakeLists.txt
src/Native/Runtime/: AsmOffsets.cpp  AsmOffsets.h  AsmOffsetsVerify.cpp  CMakeLists.txt  CachedInterfaceDispatch.cpp  CachedInterfaceDispatch.h  CallDescr.h  CommonMacros.h  CommonMacros.inl  CommonTypes.h  Crst.cpp  Crst.h  Debug.h  DebugEventSource.cpp  DebugEventSource.h  DebugEvents.h  DebugFuncEval.cpp  DebugFuncEval.h  DebuggerHook.cpp  DebuggerHook.h  EHHelpers.cpp  EtwEvents.h  FinalizerHelpers.cpp  GCHelpers.cpp  GCHelpers.h  GCMemoryHelpers.cpp  GCMemoryHelpers.h  GCMemoryHelpers.inl  GcStressControl.cpp  GcStressControl.h  GenericInstance.cpp  GenericInstance.h  GenericInstanceDescFields.h  GenericUnification.cpp  GenericUnification.h  HandleTableHelpers.cpp  ICodeManager.h  InstanceStore.cpp  InstanceStore.h  MathHelpers.cpp  (+110 more)
src/Native/Runtime/Full/: CMakeLists.txt
src/Native/Runtime/Portable/: CMakeLists.txt
src/Native/Runtime/amd64/: AllocFast.S  AllocFast.asm  AsmMacros.inc  AsmOffsetsCpu.h  CallDescrWorker.S  CallDescrWorker.asm  CallingConventionConverterHelpers.S  CallingConventionConverterHelpers.asm  ExceptionHandling.S  ExceptionHandling.asm  FloatingPoint.asm  GC.asm  GcProbe.asm  GetThread.asm  Interlocked.S  Interlocked.asm  InteropThunksHelpers.S  InteropThunksHelpers.asm  ManagedCalloutThunk.S  ManagedCalloutThunk.asm  MemClrForGC.asm  MiscStubs.S  MiscStubs.asm  PInvoke.S  PInvoke.asm  StubDispatch.S  StubDispatch.asm  ThunkPoolThunks.asm  UniversalTransition.S  UniversalTransition.asm  WriteBarriers.S  WriteBarriers.asm  WriteBarriers.s  virtualcallstubcpu.hpp
src/Native/Runtime/arm/: AllocFast.S  AllocFast.asm  AsmMacros.h  AsmOffsetsCpu.h  CallDescrWorker.S  CallDescrWorker.asm  CallingConventionConverterHelpers.S  CallingConventionConverterHelpers.asm  Dummies.asm  ExceptionHandling.S  ExceptionHandling.asm  FloatingPoint.asm  GC.asm  GcProbe.asm  GetThread.asm  Interlocked.S  InteropThunksHelpers.S  InteropThunksHelpers.asm  ManagedCalloutThunk.asm  MiscStubs.asm  PInvoke.S  PInvoke.asm  StubDispatch.S  StubDispatch.asm  ThunkPoolThunks.asm  UniversalTransition.S  UniversalTransition.asm  VirtualCallStubCPU.hpp  WriteBarriers.S  WriteBarriers.asm
src/Native/Runtime/arm64/: AllocFast.S  AllocFast.asm  AsmMacros.h  AsmOffsetsCpu.h  CallDescrWorker.S  CallDescrWorker.asm  CallingConventionConverterHelpers.S  CallingConventionConverterHelpers.asm  ExceptionHandling.S  ExceptionHandling.asm  FloatingPoint.asm  GcProbe.S  GcProbe.asm  GetThread.asm  Interlocked.S  InteropThunksHelpers.S  InteropThunksHelpers.asm  MiscStubs.S  MiscStubs.asm  PInvoke.S  PInvoke.asm  StubDispatch.S  StubDispatch.asm  ThunkPoolThunks.asm  UniversalTransition.S  UniversalTransition.asm  WriteBarriers.S  WriteBarriers.asm
src/Native/Runtime/coreclr/: bitvector.h  gcinfodecoder.cpp  gcinfodecoder.h  gcinfotypes.h  readme.txt
src/Native/Runtime/i386/: AllocFast.asm  AsmMacros.inc  AsmOffsetsCpu.h  CallDescrWorker.asm  CallingConventionConverterHelpers.asm  DivModHelpers.asm  ExceptionHandling.asm  FloatingPoint.asm  GC.asm  GcProbe.asm  GetThread.asm  InteropThunksHelpers.asm  ManagedCalloutThunk.asm  MemClrForGC.asm  MiscStubs.S  MiscStubs.asm  PInvoke.asm  StubDispatch.S  StubDispatch.asm  ThunkPoolThunks.asm  (+4 more)
src/Native/System.Private.CoreLib.Native/: CMakeLists.txt  config.h.in  configure.cmake  pal_common.h  pal_cruntime.cpp  pal_datetime.cpp  pal_dynamicload.cpp  pal_environment.cpp  pal_errno.cpp  pal_exepath.cpp  pal_guid.cpp  pal_io.cpp  pal_memory.cpp  pal_networking.cpp  pal_random.cpp  pal_threading.cpp  pal_threading.h  pal_time.cpp  pal_time.h
src/Native/System.Private.TypeLoader.Native/: CMakeLists.txt
src/Native/gc/: CMakeLists.txt  gc.cpp  gc.h  gccommon.cpp  gcconfig.h  gcee.cpp  gceewks.cpp  gchandletable.cpp  gcimpl.h  gcinterface.dac.h  gcinterface.ee.h  gcinterface.h  gcpriv.h  gcrecord.h  gcscan.cpp  gcscan.h  gcwks.cpp  handletable.cpp  handletable.inl  handletablecache.cpp  handletablecore.cpp  handletablescan.cpp  objecthandle.cpp  objecthandle.h
src/Native/jitinterface/: CMakeLists.txt  CodeHeap.cpp  CodeHeap.h  JITCodeManager.cpp  JITCodeManager.h  common.h  corinfoexception.cpp  corinfoexception.h  dllexport.h  jithost.cpp  jitinterface.cpp  jitinterface.def  jitinterface.h  jitwrapper.cpp
(+4540 files in other folders)
